@startuml notification
top to bottom direction

interface MatchMediator {
    + send(NotificationDTO notificationDTO)
    + updateStatus(REQUEST_STATUS status, Long idNotification)
    + TaxiResponseDTO getResponse(Long id)
}

class MatchMediatorImpl {
    - TaxiMatchingScheduler matchingScheduler
    - RoadNotificationVerifier notificationVerifier
    - RoadNotificationManager notificationManager
    + send(NotificationDTO notificationDTO)
    + updateStatus(REQUEST_STATUS status, Long idNotification)
}


class MatcherCostumerCabImpl {
    - MatchMediator mediator
    - List<TaxiDTO> observers;
    - ClientDTO client
    + MatcherCostumerCabImpl(MatchMediator mediator)
    + setObservers(List<TaxiDTO>)
    + setClient(ClientDTO)
    + Optional<TaxiDTO> notify();
}

interface TaxiMatchingScheduler {
    +CompletableFuture<Optional<TaxiDTO>> matchCab()
}
class TaxiMatchingSchedulerImpl {
    - MatchingScheduler scheduler
    + CompletableFuture<Optional<TaxiDTO>> matchCab()
}


interface MatchingScheduler {
    + SchedulerFuture<?> scheduleVerification(Runnable task, int initialDelay, int period)
    + shutdown()
}
class MatchingSchedulerImpl {
    - ScheduledExecutorService executor = Executors.newScheduledThreadPool(1)
    + SchedulerFuture<?> scheduleVerification(Runnable task, int initialDelay, int period)
}

class RoadNotificationManagerImpl {
    - MatchMediator mediator
    - IRoadNotificationService roadNotificationService
    + RoadNotificationManagerImpl(MatchMediator mediator)
    + Optional<RoadNotification> send(NotificationDTO notificationDTO)
    + void updateNotificationStatus(REQUEST_STATUS status, Long notificationId)
    + void setRejected(Long notificationId)
    + void setTimeOut(Long notificationId)
    + void setAccepted(Long notificationId)
}
note right of RoadNotificationManagerImpl
    --MANAGER--
    - Send a road notification
    - Status update of an existing road notification
end note

class RoadNotificationVerifier {
    - MatchMediator mediator
    - IRoadNotificationService roadNotificationService
    + RoadNotificationVerifier(MatchMediator mediator)
    + TaxiResponseDTO verifyResponse(Long notificationId)
}

note right of RoadNotificationVerifier {
    --VERIFIER--
    - Return a DTO with the boolean if the notification was accepted or deleted
}

class RoadNotificationServiceImpl {
    - ISenderNotification senderNotification
    - RoadNotificationRepository roadNotificationRepository
    + Optional<Notification> send(NotificationDTO notificationDTO)
    + setSender(ISenderNotification senderNotification)
    + boolean isRoadAccept(Long id)
    + Optional<RoadNotification> findById(Long id)
    + void updateStatus(REQUEST_STATUS status, Long id)
}
note right of RoadNotificationServiceImpl {
    --Service--
    - A down level service
    - Connect to the repository
    - Have a public interface to the different actions
}

interface RoadNotificationRepository <<interface>>{
}
note bottom of RoadNotificationRepository {
    --REPOSITORY--
}
MatchingScheduler <|.. MatchingSchedulerImpl

RoadNotificationManagerImpl *--> RoadNotificationServiceImpl
RoadNotificationVerifier *--> RoadNotificationServiceImpl
RoadNotificationServiceImpl *--> RoadNotificationRepository
MatcherCostumerCabImpl *--> MatchMediator
TaxiMatchingScheduler <|.. TaxiMatchingSchedulerImpl
TaxiMatchingSchedulerImpl --> MatchingScheduler
MatchMediator <|.. MatchMediatorImpl
MatchMediatorImpl *--> TaxiMatchingScheduler
MatchMediatorImpl *--> RoadNotificationVerifier
MatchMediatorImpl *--> RoadNotificationManagerImpl
@enduml